fixed scrollbar appearing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html,
+body {
+  overflow-x: hidden;
+  position: fixed;
+}
+
 .flex {
   height: 100vh;
   width: 100vw;
